Changelog
=========

1.1 (unreleased)
----------------

- Nothing changed yet.


1.0 (2012-05-03)
----------------

- Plone 3.3 compatibility (was Plone 4 compatible only).


1.0b1 (2011-09-22)
------------------

- Initial release