@@ -15,6 +15,14 @@
       provides="Products.GenericSetup.interfaces.EXTENSION"
       for="Products.CMFPlone.interfaces.IPloneSiteRoot"
       />
+  <genericsetup:registerProfile
+      name="uninstall"
+      title="jQuery Color Picker (uninstall)"
+      directory="profiles/uninstall"
+      description="Uninstall jQuery Color Picker integration for Plone"
+      provides="Products.GenericSetup.interfaces.EXTENSION"
+      for="Products.CMFPlone.interfaces.IPloneSiteRoot"
+      />
 
   <browser:resourceDirectory
       name="collective.js.colorpicker.js"
