@@ -1,0 +1,4 @@
+<?xml version="1.0"?>
+<object name="portal_css">
+  <stylesheet remove="True" id="++resource++collective.js.colorpicker.css"/>
+</object>
