@@ -4,7 +4,8 @@ Changelog
 1.1 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Add uninstall profile.
+  [thet]
 
 
 1.0 (2012-05-03)
